--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,11 +18,20 @@
                 </button>
                 <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
                     <h4 class="dropdown-header">Active server</h4>
-                    <a class="active" clrDropdownItem>Gitlab official</a>
-                    <a clrDropdownItem>Gitlab 2</a>
-                    <a clrDropdownItem>Gitlab 3</a>
+                    <a class="disabled" *ngIf="servers.length === 0" clrDropdownItem>No servers added yet!</a>
+                    <a *ngFor="let server of servers" [class.active]="serversService.isActive(server.name)" clrDropdownItem>
+                        {{ server.name }}
+                        <div class="dropdown-buttons">
+                            <button type="button" class="dropdown-icon-button" (click)="openEditServerModal(server)">
+                                <clr-icon shape="pencil"></clr-icon>
+                            </button>
+                            <button type="button" class="dropdown-icon-button" (click)="removeServer(server)">
+                                <clr-icon shape="trash"></clr-icon>
+                            </button>
+                        </div>
+                    </a>
                     <div class="dropdown-divider"></div>
-                    <a clrDropdownItem>Configure new server</a>
+                    <a clrDropdownItem (click)="openAddServerModal()">Configure new server</a>
                 </clr-dropdown-menu>
             </clr-dropdown>
         </div>
