display group full name; group file results + count badge

--- a/src/app/servers/add-server-modal/add-server-modal.component.html
+++ b/src/app/servers/add-server-modal/add-server-modal.component.html
@@ -4,15 +4,15 @@
         <div class="modal-body">
             <clr-input-container>
                 <label>Name</label>
-                <input clrInput type="text" formControlName="name" />
+                <input clrInput type="text" formControlName="name" size="40" />
             </clr-input-container>
             <clr-input-container>
                 <label>Gitlab URL</label>
-                <input clrInput type="text" formControlName="url" />
+                <input clrInput type="text" formControlName="url" size="40" />
             </clr-input-container>
             <clr-input-container>
                 <label>Gitlab API token</label>
-                <input clrInput type="text" formControlName="token" />
+                <input clrInput type="text" formControlName="token" size="40" />
             </clr-input-container>
         </div>
         <div class="modal-footer">
