--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,16 +8,16 @@
                     <label for="group">Group</label>
                     <select clrSelect id="group" formControlName="group">
                         <option value="-1" selected>All</option>
-                        <option *ngFor="let group of groups" [value]="group.id">{{group.name}}</option>
+                        <option *ngFor="let group of groups" [value]="group.id">{{group.full_name}}</option>
                     </select>
                 </clr-select-container>
                 <clr-input-container>
                     <label for="projectName">Project name</label>
-                    <input clrInput type="text" id="projectName" formControlName="projectName">
+                    <input clrInput type="text" id="projectName" formControlName="projectName" size="30">
                 </clr-input-container>
                 <clr-input-container>
                     <label for="searchText">Search text</label>
-                    <input clrInput type="text" id="searchText" formControlName="searchText">
+                    <input clrInput type="text" id="searchText" formControlName="searchText" size="40">
                 </clr-input-container>
                 <button type="submit" class="btn btn-icon btn-success">
                     <clr-icon shape="search"></clr-icon>
@@ -36,9 +36,10 @@
     <clr-tree-node *ngFor="let searchResult of searchResults">
         <clr-icon shape="folder"></clr-icon>
         {{searchResult.project.name_with_namespace}} [{{searchResult.project.default_branch}}]
-        <clr-tree-node *ngFor="let file of searchResult.fileSearchResults">
+        <clr-tree-node *ngFor="let fileSearchResult of searchResult.fileSearchResults | keyvalue">
             <clr-icon shape="file"></clr-icon>
-            {{file.filename}}
+            {{fileSearchResult.key}}
+            <span class="badge badge-success results-count" *ngIf="fileSearchResult.value.length > 1">{{fileSearchResult.value.length}}</span>
         </clr-tree-node>
     </clr-tree-node>
 </div>
