--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -36,9 +36,9 @@
     <clr-tree-node *ngFor="let searchResult of searchResults">
         <clr-icon shape="folder"></clr-icon>
         {{searchResult.project.name_with_namespace}} [{{searchResult.project.default_branch}}]
-        <clr-tree-node *ngFor="let fileSearchResult of searchResult.fileSearchResults | keyvalue">
+        <clr-tree-node class="clickable" *ngFor="let fileSearchResult of searchResult.fileSearchResults | keyvalue">
             <clr-icon shape="file"></clr-icon>
-            {{fileSearchResult.key}}
+            <a class="file-link" (click)="openFile(fileSearchResult.key, searchResult.project)">{{fileSearchResult.key}}</a>
             <span class="badge badge-success results-count" *ngIf="fileSearchResult.value.length > 1">{{fileSearchResult.value.length}}</span>
         </clr-tree-node>
     </clr-tree-node>
