basic code highlighting

--- a/src/app/file-viewer/file-viewer.component.html
+++ b/src/app/file-viewer/file-viewer.component.html
@@ -14,6 +14,6 @@
             </div>
         </div>
 
-        <pre *ngIf="fileLoaded && !error">{{fileContent}}</pre>
+        <pre class="file-view" *ngIf="fileLoaded && !error"><code [innerHTML]="fileContent"></code></pre>
     </div>
 </clr-modal>
