--- a/src/app/shared/components/server-not-selected-alert/server-not-selected-alert.component.html
+++ b/src/app/shared/components/server-not-selected-alert/server-not-selected-alert.component.html
@@ -2,7 +2,7 @@
     <div class="alert-items">
         <div class="alert-item static">
             <div class="alert-icon-wrapper">
-                <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
+                <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
             </div>
             <span class="alert-text">You must select server first! Use menu in top right corner to select active server.</span>
         </div>
