--- a/src/app/shared/components/file-viewer/file-viewer.component.html
+++ b/src/app/shared/components/file-viewer/file-viewer.component.html
@@ -14,6 +14,6 @@
             </div>
         </div>
 
-        <pre class="file-view" *ngIf="fileLoaded && !error"><code [innerHTML]="fileContent"></code></pre>
+        <pre class="file-view line-numbers" [hidden]="!fileLoaded"><code #codeContainer [attr.class]="'language-' + highlightLanguage">{{fileContent}}</code></pre>
     </div>
 </clr-modal>
