--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -29,3 +29,10 @@
 .file-link {
     cursor: pointer;
 }
+
+.file-path {
+    line-height: 1.4em;
+    display: inline-block;
+    font-size: 0.9em;
+    text-decoration: inherit;
+}
