- fix invalid project namespace property - fix checking updates at startup

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -37,7 +37,7 @@
                         <ng-template ng-option-tmp let-item="item" class="test">
                             <div class="project-item">
                                 <div class="project-name">{{item.name}}</div>
-                                <div class="project-group">{{item.namespace.full_path}}</div>
+                                <div class="project-group">{{item.path_with_namespace}}</div>
                             </div>
                         </ng-template>
                     </ng-select>
