--- a/src/app/shared/components/file-viewer/file-viewer.component.html
+++ b/src/app/shared/components/file-viewer/file-viewer.component.html
@@ -16,6 +16,7 @@
             </div>
         </div>
 
-        <pre class="file-view line-numbers" [hidden]="!fileLoaded"><code #codeContainer [attr.class]="'language-' + highlightLanguage">{{fileContent}}</code></pre>
+        <pre class="file-view line-numbers"
+             [attr.data-line]="linesToHighlight"><code #codeContainer [ngClass]="'language-' + highlightLanguage">{{fileContent}}</code></pre>
     </div>
 </clr-modal>
