- added settings modal - file viewer full screen setting - file viewer wrap line setting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
             <a class="nav-link nav-text" routerLink="/search" routerLinkActive="active">Search</a>
         </div>
         <div class="header-actions">
+            <a class="nav-link nav-icon" href="#" (click)="openSettingsModal()">
+                <clr-icon shape="cog"></clr-icon>
+            </a>
             <clr-dropdown>
                 <button class="nav-icon" clrDropdownTrigger>
                     <clr-icon shape="hard-disk"></clr-icon>
