--- a/src/app/shared/components/file-viewer/file-viewer.component.html
+++ b/src/app/shared/components/file-viewer/file-viewer.component.html
@@ -16,6 +16,7 @@
             </div>
         </div>
 
-        <ace #ace [hidden]="!fileLoaded" [mode]="highlightLanguage" [theme]="'chrome'" [value]="fileContent" [disabled]="true"></ace>
+        <ace #ace [hidden]="!fileLoaded" [mode]="highlightLanguage" [theme]="'chrome'" [value]="fileContent"
+                  [disabled]="true" [config]="aceConfig"></ace>
     </div>
 </clr-modal>
