--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -64,4 +64,4 @@
     <div class="progress loop" *ngIf="searchInProgress"><progress></progress></div>
 </div>
 
-<app-search-results-list [searchResults]="searchResults" (fileSelected)="openFile($event)"></app-search-results-list>
+<app-search-results-list [searchResults]="searchResultsTree" (fileSelected)="openFile($event)"></app-search-results-list>
