--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="settingsForm" (ngSubmit)="save()" clrForm>
+<form [formGroup]="settingsForm" (ngSubmit)="save()" clrForm clrLayout="vertical">
     <clr-modal [clrModalOpen]="modalOpen" (clrModalOpenChange)="close()">
         <h3 class="modal-title">Settings</h3>
         <div class="modal-body">
@@ -19,6 +19,17 @@
                     <input clrCheckbox type="checkbox" formControlName="rememberLastSearch" />
                     <label>Remember last search</label>
                 </clr-checkbox-wrapper>
+                <clr-radio-container clrInline class="setting-row">
+                    <label>Results view</label>
+                    <clr-radio-wrapper>
+                        <input type="radio" clrRadio value="FLAT" formControlName="searchResultsView" />
+                        <label>Flat</label>
+                    </clr-radio-wrapper>
+                    <clr-radio-wrapper>
+                        <input type="radio" clrRadio value="TREE" formControlName="searchResultsView" />
+                        <label>Tree</label>
+                    </clr-radio-wrapper>
+                </clr-radio-container>
             </div>
         </div>
         <div class="modal-footer">
